Mon Jan 14 00:28:40 2002  Jonathan Blandford  <jrb@gnome.org>

	* schemas/desktop_gnome_applications_terminal.schemas: add
	exec_arg key to separate the command from the arguments.  Somewhat
	dubious, but then again, so is this key.

2002-01-13  Alexander Larsson  <alla@lysator.liu.se>

	* schemas/desktop_gnome_applications_window_manager.schemas:
	Added number_of_workspaces and workspace_names.

2002-01-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* monikers/bonobo-config-bag.c (impl_BonoboPropertyBag_getValue):
	return a BONOBO_ARG_NULL if we can't resolve the GConf type
	(impl_BonoboPropertyBag_getValues): implemented
	(impl_BonoboPropertyBag_setValue): if the type is BONOBO_ARG_NULL,
	unset the key in the configuration database

	* monikers/GNOME_Moniker_std.server.in.in: the GNOME std monikers
	are in libmoniker_extra_2.so, not libmoniker_std_2.so

2002-01-12 Hasbullah Bin Pit <sebol@ikhlas.com>
	
	* Added Malay (ms) Translation in configure.in

2002-01-11  Rodrigo Moya <rodrigo@gnome-db.org>

	* monikers/bonobo-moniker-config.c (bonobo_moniker_config_resolve):
	removed check for Bonobo/Control requested interface, since this
	is not needed here

2002-01-10  Anders Carlsson  <andersca@gnu.org>
	
	* configure.in: Release 1.109.0

	* schemas/Makefile.am (install-data-local): Fix builddir != srcdir bug.

2002-01-10  Michael Meeks  <michael@ximian.com>

	* schemas/desktop_gnome_interface.schemas: kill
	double def. of relief.

2002-01-10  Michael Meeks  <michael@ximian.com>

	* schemas/desktop_gnome_interface.schemas: kill
	double def. of menus-have-icons.

2002-01-09  jacob berkman  <jacob@localhost.localdomain>

	* gnome-data/Makefile.am (EXTRA_DIST): soundlist_DATA is a
	variable not a file

2002-01-09  Michael Meeks  <michael@ximian.com>

	* Makefile.am: add monikers.

2002-01-08  Richard Hestilow  <hestilow@ximian.com>

	* gnome-data: Added.

	* configure.in, Makefile.am: Add gnome-data subdir.

Mon Jan  7 20:40:09 2002  Jonathan Blandford  <jrb@redhat.com>
