@@ -13,36 +13,14 @@
       </locale>
     </schema>
     <schema>
-      <applyto>/desktop/gnome/interface/statusbar-interactive</applyto>
-      <key>/schemas/desktop/gnome/interface/statusbar-interactive</key>
+      <applyto>/desktop/gnome/interface/toolbar-style</applyto>
+      <key>/schemas/desktop/gnome/interface/toolbar-style</key>
       <owner>gnome</owner>
-      <type>bool</type>
-      <default>false</default>
+      <type>string</type>
+      <default>icons</default>
       <locale name="C">
-        <short>Statusbar Interactive</short>
-        <long>Statusbar Interactive</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/menubar-relief</applyto>
-      <key>/schemas/desktop/gnome/interface/menubar-relief</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>false</default>
-      <locale name="C">
-        <short>Menubar Relief</short>
-        <long>Menubar Relief</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/toolbar-labels</applyto>
-      <key>/schemas/desktop/gnome/interface/toolbar-labels</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Toolbar Labels</short>
-        <long>Toolbar Labels</long>
+        <short>Toolbar Style</short>
+        <long>Toolbar Style. Valid values are both, icon, and text</long>
       </locale>
     </schema>
     <schema>
@@ -65,28 +43,6 @@
       <locale name="C">
         <short>Menubar Detachable</short>
         <long>Menubar Detachable</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/toolbar-relief</applyto>
-      <key>/schemas/desktop/gnome/interface/toolbar-relief</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Toolbar Relief</short>
-        <long>Toolbar Relief</long>
-      </locale>
-    </schema>
-    <schema>
-      <applyto>/desktop/gnome/interface/statusbar-meter-on-right</applyto>
-      <key>/schemas/desktop/gnome/interface/statusbar-meter-on-right</key>
-      <owner>gnome</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-        <short>Statusbar Meter On Right</short>
-        <long>Statusbar Meter On Right</long>
       </locale>
     </schema>
     <schema>
