@@ -1,3 +1,8 @@
+2002-01-14  Anders Carlsson  <andersca@gnu.org>
+
+	* gnome-gconf.c (gnome_gconf_get_gnome_libs_settings_relative): Make this
+	function do what it's supposed to.
+
 Mon Jan 14 00:20:23 2002  Jonathan Blandford  <jrb@gnome.org>
 
 	* gnome-exec.c (gnome_prepend_terminal_to_vector): use the schemas
