@@ -1,3 +1,8 @@
+2002-01-14  Anders Carlsson  <andersca@gnu.org>
+
+	* schemas/desktop_gnome_interface.schemas: Fix toolbar-style 
+	and remove some unused keys.
+
 Mon Jan 14 00:28:40 2002  Jonathan Blandford  <jrb@gnome.org>
 
 	* schemas/desktop_gnome_applications_terminal.schemas: add
